src/css/style.css
:root {
  --bs-black: #000;
  --bs-brown: #393423;
  --bs-grey-2: #444;
  --bs-grey-3: #ccc;
  --bs-grey-4: #222;
  --bs-grey-5: #333;
  --bs-grey-6: #999;
  --bs-cape-honey: #ffe9ab;
  --bs-cerulean: #00aced;
  --bs-code-grey: #1d1d1d;
  --bs-chathams-blue: #0f4f7e;
  --bs-chathams-blue-2: #005999;
  --bs-chathams-blue-3: #87a7be;
  --bs-chathams-blue-4: #e1ebf4;
  --bs-crete: #4b5e26;
  --bs-light-green: #eaf0dc;
  --bs-dark-burgundy: #821206;
  --bs-emperor: #4f4f4f;
  --bs-madison: #093058;
  --bs-pampas: #f6f5f0;
  --bs-pablo: #73705f;
  --bs-white: #fff;
  --bs-pablo-2: #706d61;
  --bs-purple: #44136c;
  --bs-purple-2: #956cb7;
  --bs-gray-100: #f8f9fa;
  --bs-gray-200: #e9ecef;
  --bs-gray-300: #dee2e6;
  --bs-gray-400: #ced4da;
  --bs-gray-500: #adb5bd;
  --bs-gray-600: #6c757d;
  --bs-gray-700: #495057;
  --bs-gray-800: #343a40;
  --bs-gray-900: #212529;
  --bs-primary: #0d6efd;
  --bs-secondary: #6c757d;
  --bs-success: #4b5e26;
  --bs-info: #0dcaf0;
  --bs-warning: #ffc107;
  --bs-danger: #dc3545;
  --bs-light: #f8f9fa;
  --bs-dark: #212529;
  --bs-primary-rgb: 13, 110, 253;
  --bs-secondary-rgb: 108, 117, 125;
  --bs-success-rgb: 75, 94, 38;
  --bs-info-rgb: 13, 202, 240;
  --bs-warning-rgb: 255, 193, 7;
  --bs-danger-rgb: 220, 53, 69;
  --bs-light-rgb: 248, 249, 250;
  --bs-dark-rgb: 33, 37, 41;
  --bs-white-rgb: 255, 255, 255;
  --bs-black-rgb: 0, 0, 0;
  --bs-body-color-rgb: 33, 37, 41;
  --bs-body-bg-rgb: 255, 255, 255;
  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto,
    "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --bs-font-serif: "Times New Roman", Times, serif;
  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
    "Liberation Mono", "Courier New", monospace;
  --bs-gradient: linear-gradient(
    180deg,
    rgba(255, 255, 255, 0.15),
    rgba(255, 255, 255, 0)
  );
  --bs-body-font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  --bs-body-font-size: 1rem;
  --bs-body-font-weight: 400;
  --bs-body-line-height: 1.75;
  --bs-body-color: #212529;
  --bs-body-bg: #fff;
  --bs-border-width: 1px;
  --bs-border-style: solid;
  --bs-border-color: #dee2e6;
  --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
  --bs-border-radius: 0.375rem;
  --bs-border-radius-sm: 0.25rem;
  --bs-border-radius-lg: 0.5rem;
  --bs-border-radius-xl: 1rem;
  --bs-border-radius-2xl: 2rem;
  --bs-border-radius-pill: 50rem;
  --bs-link-color: #005999;
  --bs-link-hover-color: #003e6b;
  --bs-code-color: #d63384;
  --bs-highlight-bg: #fff3cd;
}

/* Global styles */

* {
  box-sizing: border-box;
  width: 100%;
}
img {
  max-width: 100%;
}

body {
  font-family: var(--bs-body-font-family);
  font-size: 18px;
  margin: 0;
}

a:link,
a:visited {
  color: var(--bs-link-color);
}

a:hover {
  color: var(--bs-link-hover-color);
}

/* Skip links styling */
.skip-links ul {
  list-style-type: none;
  margin: 0;
  padding-left: 0;
}

.skip-links a {
  font-size: 11px;
  font-size: 0.6875rem;
  position: absolute;
  right: 20px;
  top: -200px;
  z-index: -1;
}

.skip-links a:focus {
  top: 2px;
  z-index: 9999;
}

/* Disclaimer */
.disclaimer {
  background-color: rgb(255, 255, 255);
  font-size: 0.8rem;
  padding: 10px;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  margin: 0;
  padding: 0.5em;
  font-size: 0.8rem;
  color: var(--bs-black);
}

/* Title and logo styling */
section.global-header {
  display: flex;
  background-color: var(--bs-black);
  height: 5em;
  justify-content: space-between;
  align-items: center;
  padding: 0;
  width: 100%;
}
span.logo {
  height: 0;
  width: 0;
  margin: 0.5em;
  display: inline-block;
  border-top: 34px solid var(--bs-light-green);
  border-left: 13px solid transparent;
  border-right: 13px solid transparent;
  color: var(--bs-white);
}
/* "national park service" */
span.national-park-service {
  font-size: .7rem;
  font-weight: bold;
  color: white;
}
/* 'national park service + logo */
.site-title {
  text-decoration: none;
  display: flex;
  align-items: center;
}
.site-title > span {
  font-size: 1rem;
  margin-left: 0.3em;
  font-size: .8rem;
}
/* icons and label for MENU and SEARCH and icons on right of header */
.global-header__right {
  display: flex;
  align-items: center;
  gap: 1rem;
}
/* this button id holds the "menu" label and menu icon */
button#global-nav-toggle {
  background-color: var(--bs-black);
  color: var(--bs-white);
  display: flex;
  align-items: center;
  gap: 0;
  cursor: pointer;
  border: none;
}
.search-icon {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  line-height: 0;
  background: none;
  border: none;
  transition: background-color 0.3s ease;
  font-size: 0;
}
.search-icon:hover {
  background-color: var(--bs-chathams-blue);
  cursor: pointer;
}
svg.icon {
  width: 1.5rem;
  height: 1.5rem;
  background-color: var(--bs-black);
}
.menu-label {
  font-size: 1.2rem;
}

/* main image of grand prismatic in yellowstone */
.image-banner {
  position: relative;
  width: 100%;
  display: block;
}
.image-banner img {
  width: 100%;
}
.image-banner_content {
  background-color: rgba(0, 0, 0, 0.5);
  padding: 1rem;
  width: 100%;
  color: white;
  position: absolute;
  bottom: 0;
  left: 0;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  gap: 10px;
}
.image-banner_spans > span {
  padding-left: 1rem;
  font-size: 0.5rem;
}
p.park-description-p {
  font-size: 0.7rem;
  display: grid;
  grid-template-columns: 1fr;
}
/* "yellowstone" */
#park-header {
  background-color: var(--bs-black);
}
#park-header a {
  color: var(--bs-white);
  text-decoration: none;
  width: 270px;
  font-size: 1.5rem;
}
#park-header a:hover {
  color: var(--bs-white);
  text-decoration: none;
  cursor: pointer;
}

/* removing whiet gap between image and links below */
section, nav, p, ul, li {
  margin: 0;
  padding: 0;
  list-style: none;
}

/* Utility styles */
.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

svg {
  background-color: var(--bs-black);
  fill: var(--bs-white);
}

#icon-header {
  background-color: var(--bs-black);
  color: var(--bs-white);
  display: flex;
  align-items: center;
  gap: 1rem;
  padding-left: 20px;
  padding-right: 20px;
  justify-content: space-between;
  flex-wrap: nowrap;
}
#icon-header ul {
  display: flex;
  justify-content: center;
  gap: 2rem;
  list-style: none;
  padding: 0;
  margin: 0;
}
#icon-header li {
  display: flex;
  flex-direction: column; /* puts text above icons */
  align-items: center;/* centers text/icon horizontally */
  text-align: center; 
  flex-wrap: wrap; /* allows items to wrap to the next line */
}
.icon-link {
  flex: 1;
  text-align: center;
  min-width: 0;
}
.icon-wrapper {
  display: flex;
  flex-direction: column; /* puts text above icons, stacked vertically */
  align-items: center; /* centers text/icon horizontally */
  white-space: nowrap; /* prevents text from wrapping */
  padding-bottom: 0.3rem;
}
#info-icon {
  padding-left: 0.25rem;
}
#icon-header span {
  font-size: 0.7rem; /* smaller text */
  color: var(--bs-white);
  text-decoration: none;
}
.label--container {
  font-size: 0.5rem;
}
/* dropdown nav */
.global-nav {
  display: none;
}
.intro h2 {
  padding: 1.4rem 1rem 1rem 1rem;
  font-size: 1.4rem;
  margin: 0;
}
.intro p {
  padding-left: 1rem;
  padding-right: 1rem;
  font-size: 0.8rem;
  margin: 0;
}
/* main page links with images*/
.media-card {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.media-card_img {
  /* width: 90%; */
  height: auto;
  margin: 0 auto;
  display: block;
  /* padding-top: 1rem; */
}
.media-card > a {
  text-decoration: none;
  color: var(--bs-black);
  font-size: 0.9rem;
  padding: 1rem;
  font-family: var(--bs-font-sans-serif)
}
.media-card a > p {
  font-size: 0.8rem;
}

/* Main Footer */
#park-footer{
  background-image: url("../images/topo_pattern.png");
  background-repeat: repeat;
  background-size: cover;
  padding: 1rem;
  color: var(--bs-black);
  font-size: 0.7rem;
}

@media (min-width: 500px)  {
  /* logo and "national park service (left header) */
  /* Title and logo styling */
  section.global-header {
    display: flex;
  }
  /* 'national park service + logo */
  .site-title > span {
    margin-left: 0.5rem;
    font-size: 1rem;
  }
  /* right side of header w/ menu and search label and icons */
  .global-header__right {
    flex: 1;
  }
  .menu-label {
    padding-right: 1rem;
  }
  .image-banner {
    height: 350px;
    display: flex;
    justify-content: center;
  }
  /* "yellowstone" */
  .image-banner_name {
    font-size: 1.5rem;
    color: var(--bs-white);
    text-decoration: none;
    width: auto;
  }
  /* national park, id, mt, wy */
  .image-banner_spans > span{
    font-size: .7rem;
    flex: 1; /* allows flex item to grow and fill the space */
  }
  /* the box around the icons - but not the banner behind it that's black */
  #icon-header  {
    display: flex;
    justify-content: space-between; /* can use center too */
    height: 5em;
    padding: 0 20%;
    flex-wrap: nowrap; /* prevents wrapping */
    overflow-x: auto; /* enables scroll if needed */
    gap: 1rem;
    /* max-width: 1000px; */
    margin: 0 auto;
  }
  #icon-header span {
    font-size: .7rem;
    text-align: center;
  }
  #icon-header li {
    flex: 1;
    text-align: center;
    min-width: 0;
  }
  /* css for image links */
 .media-card-container {
  display: flex;
  justify-content: center;
  padding: 0;
  flex-wrap: nowrap; /* keep it all in one row */
 }
 .media-card {
  max-width: 90%;
  box-sizing: border-box;
  background-color: var(--bs-white);
  text-align: left;
  padding: 0;
 }
 .media-card img {
  width: 100%;
  height: auto;
  display: block;
  padding: 0;
 }
}

